feat(schematics): use @ngrx/schematics
* ngrx collection now extends @ngrx/schematics
* modify the nrwl `ngrx` schematic to use `@ngrx/schematics` to generate the initial source for actions, reducers, and effects
* modify the generated source to conform to Nx standards
* generate init and interface files
* remove template files for action, effect, and reducer scaffolding
* modify collection to extend `@ngrx/schematics` so the ngrx commands are also easily accessible
* inject dataloaded enums into action class
* configure nx workspace devDep on @ngrx/schematics version
* override ngrx effects.spec.ts with nx templated version

fixes #174.

--- a/packages/schematics/package.json
+++ b/packages/schematics/package.json
@@ -2,21 +2,42 @@
   "name": "@nrwl/schematics",
   "version": "0.0.1",
   "description": "Nrwl Extensions for Angular: Schematics",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nrwl/nx.git"
+  },
+  "keywords": [
+    "RxJS",
+    "Angular",
+    "Workspace",
+    "NgRx",
+    "Schematics",
+    "Angular CLI"
+  ],
   "bin": {
     "create-nx-workspace": "./bin/create-nx-workspace.js",
     "nx": "./src/command-line/nx.js"
   },
   "main": "index.js",
   "types": "index.d.js",
-  "peerDependencies": {},
+  "peerDependencies": { },
   "author": "Victor Savkin",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/nrwl/nx/issues"
+  },
+  "homepage": "https://github.com/nrwl/nx#readme",
   "schematics": "./src/collection.json",
   "dependencies": {
+    "@ngrx/schematics": "5.2.0",
+    "@schematics/angular": "0.4.6",
     "app-root-path": "^2.0.1",
     "npm-run-all": "4.1.2",
     "semver": "5.4.1",
     "tmp": "0.0.33",
     "yargs-parser": "9.0.2"
+  },
+  "devDependencies": {
+    "@angular-devkit/schematics": "0.4.6"
   }
 }
